test/corpus/translation.txt
===
translation
===
world -> свет
---
(source_file
    (stmt_translation
        (text) (text)
    )
)


===
translation without original
===
 -> свет
---
(source_file
    (stmt_plain (text))
)


===
translation without translation
===
world ->
---
(source_file
    (stmt_translation (text))
)


===
translation with keywords
:error
===
world \] \[ \| \: \# -> hello
---
